# Solitaire-in-C

./: CMakeLists.txt  Cards.txt  Maine.c  main.c
Testing/: Test.c  Test2.c  Test3.c  Test4.c  Test5.c  Test6.c  Test7.c  Test8.c  TestTwo.c
