cmake_minimum_required(VERSION 3.21)
project(project_2 C)

set(CMAKE_C_STANDARD 23)

add_executable(project_2 main.c)
add_executable(project_23 Maine.c)
add_executable(project_211 Testing/Test.c)
add_executable(project_212 Testing/Test2.c)
add_executable(project_213 Testing/Test3.c)
add_executable(project_214 Testing/Test4.c)
add_executable(project_215 Testing/Test5.c)
add_executable(project_216 Testing/Test6.c)
add_executable(project_217 Testing/Test7.c)
